--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,10 @@ dependencies {
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 
     compile 'com.google.code.gson:gson:2.7'
+
+    compile('com.mikepenz:materialdrawer:5.9.2@aar') {
+        transitive = true
+    }
+
     testCompile 'junit:junit:4.12'
 }
