--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
         transitive = true
     }
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.iarcuschin:simpleratingbar:0.1.5'
 
     testCompile 'junit:junit:4.12'
 }
